--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <h1>hola pichuuuu </h1>
+    <h1>hola pichu</h1>
 </head>
 <body>
     <img src="https://i.pinimg.com/originals/49/1c/b9/491cb9368fd382f19288734a87812cf6.jpg" alt="Imagen Graciosa de Google">
