--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>hola pichu</h1>
-    <img src="https://i.pinimg.com/originals/49/1c/b9/491cb9368fd382f19288734a87812cf6.jpg" alt="Imagen Graciosa de Google">
+    <img src="C:\Users\Nicolas\Desktop\cami.jpg" alt="Descripción de mi imagen">
+
 </body>
 </html>
