--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>hola pichu</h1>
     
-    <img src="C:\Users\Nicolas\Desktop\cami.jpg" alt="Descripción de mi imagen">
+    <img src="https://ei.phncdn.com/videos/202409/06/457418921/thumbs_15/(m=eGNdHgaaaWavb)(mh=hyhj3MWW7ZjqO6Pe)5.jpg" alt="Google Logo">
 
 </body>
 </html>
