--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>hola pichu</h1>
     
-    <img src="https://ei.phncdn.com/videos/202409/06/457418921/thumbs_15/(m=eGNdHgaaaWavb)(mh=hyhj3MWW7ZjqO6Pe)5.jpg" alt="Google Logo">
+    <img src="https://ei.phncdn.com/videos/202312/01/443991471/original/(m=eaSaaTbaAaaaa)(mh=RJhkSyh4rR0DLFQz)15.jpg" alt="Google Logo">
 
 </body>
 </html>
