--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p>Derechos reservados &copy; 2024</p>
     </footer>
   
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
 
