--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi E-commerce</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
     <header>
@@ -68,7 +68,7 @@
         <p>Derechos reservados &copy; 2024</p>
     </footer>
   
-    <script src="scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 </body>
 </html>
 
