--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
         <p>Derechos reservados &copy; 2024</p>
     </footer>
   
-    <script src="/js/scripts.js"></script>
+    <script src="/public/js/scripts.js"></script>
 </body>
 </html>
 
