se corrigio error logo  y rutas absolutas

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         
-        <img src="C:\Users\Nicolas\Desktop\nicolas\Logo4.jpeg" alt="Logo de mi sitio web">
+        <img src="/img/logo4.jpeg" alt="Logo de mi sitio web">
 
         <nav>
             <ul>
