--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                     <button>Agregar al carrito</button>
                 </div>
 
-                <a href="https://wa.me/1138889462" target="_blank" class="icono-flotante">
+                <a href="https://wa.me/1138889462?text=¡Hola!%20Vengo%20desde%20el%20logo%20de%20su%20sitio%20web." target="_blank" class="icono-flotante">
                     <img src="https://img.icons8.com/?size=100&id=16713&format=png&color=000000" alt="WhatsApp">
                   </a>
                 </section>
@@ -71,4 +71,3 @@
     <script src="/js/scripts.js"></script>
 </body>
 </html>
-
